--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,19 +75,10 @@ body.dark-theme {
   transition: 0.3s;
 }
 
-@media screen and (min-width: 240px) and (max-width: 480px) {
-  .change-theme i {
-    font-size: 20px;
-    margin-left: 20px;
-    padding-bottom: 50px;
-  }
-}
-
 .change-theme i:hover {
   color: black;
   transition: 0.3s;
 }
-
 
 /*===== z index =====*/
 :root {
@@ -171,25 +162,6 @@ img {
   margin-left: 30px;
 }
 
-@media only screen and (min-width: 240px) and (max-width: 480px) {
-.home__img img {
-    width: 100px;
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-bottom: 7em;
-  }
-}
-
-/* @media only screen and (min-device-width: 800px) and (max-device-width: 1280px) {
-.home__img img {
-    width: 400px;
-    display: block;
-    margin-left: -40px;
-    margin-right: 200px;
-    margin-top: 100px;
-  }
-} */
 
 
 /*===== CLASS CSS ===== */
@@ -212,7 +184,7 @@ img {
   left: 0;
   right: 0;
   margin: auto;
-  top: 3.0rem;
+  top: 2rem;
   background-color: var(--first-color);
 }
 
@@ -224,7 +196,7 @@ img {
   left: 0;
   right: 0;
   margin: auto;
-  top: 2.5rem;
+  top: 2.2rem;
   background-color: var(--first-color);
 }
 
@@ -236,7 +208,7 @@ img {
   left: 0;
   right: 0;
   margin: auto;
-  top: 2.5rem;
+  top: 2.2rem;
   background-color: var(--first-color);
 }
 
@@ -248,10 +220,9 @@ img {
   left: 0;
   right: 0;
   margin: auto;
-  top: 2.5rem;
+  top: 2.2rem;
   background-color: var(--first-color);
 }
-
 
 .section {
   padding-top: 3rem;
@@ -409,21 +380,10 @@ img {
   row-gap: 2rem;
 }
 
-@media only screen and (max-width: 767px) {
-  #home {
-    margin-top: 200px;
-  }
-}
 
 .home__data {
   align-self: center;
   margin-top: 2px;
-}
-
-@media only screen and (max-width: 767px) {
-  .home__data {
-    margin-top: 100px;
-  }
 }
 
 .home__data p {
@@ -432,24 +392,16 @@ img {
   overflow-wrap: normal;
 }
 
-@media only screen and (max-width: 767px) {
-  .home__data p {
-    margin-top: 5px;
-    font-size: 1rem;
-  }
-}
-
 .home__title {
   font-size: var(--big-font-size);
   margin-bottom: var(--mb-5);
   color: var(--text-color);
 }
 
-@media only screen and (max-width: 767px) {
-  .home__title {
-    font-size: 30px;
-    margin-bottom: -5px;
-  }
+
+
+.home__data a{
+  margin-top: 15px;
 }
 
 .home__title-color {
@@ -461,20 +413,8 @@ img {
   margin-top: -50px;
 }
 
-@media only screen and (max-width: 767px) {
-  .home__social a{
-    margin-top: 40px;
-    font-size: 30px;
-  }
-  .home__data p {
-    font-size: 15px;
-    padding: 5px;
- }
- .home__data a {
-   margin-top: 4px;
- }
-  
-}
+
+
 
 .home__social .scroll-down {
   position: relative;
@@ -485,11 +425,7 @@ img {
   color: var(--first-color-ball);
 }
 
-@media (max-width: 500px) {
-  .home__social .scroll-down {
-    justify-content: center;
-  }
-}
+
 
 .home__social .scroll-down .scroll-svg {
   height: 18px;
@@ -521,27 +457,12 @@ img {
   margin-left: auto;
 }
 
-@media only screen and (max-width: 767px) {
-  .skills__container .resume__col--2 {
-    justify-content: center;
-    align-items: center;
-    margin-left: auto;
-  }
-}
+
 
 .home__social-icon {
   width: max-content;
   font-size: 2rem;
   color: var(--second-color);
-}
-
-@media only screen and (max-width: 767px) {
-  .home__social-icon {
-    font-size: 20px;
-    display: flex;
-    flex-direction: row;
-    padding: 0 0.4rem;
-  }
 }
 
 .home__social-icon:hover {
@@ -557,15 +478,6 @@ img {
   border-radius: 1rem;
 }
 
-@media screen and (max-width: 768px) {
-  .home__img {
-    width: 100px;
-    margin-bottom: 12rem;
-    margin-left: -80px;
-    align-content: center;
-
-  }
-}
 
 /*BUTTONS*/
 .button {
@@ -586,15 +498,6 @@ img {
 
 
 
-@media screen and (max-width: 767px) {
-  .about__container {
-    margin-top: 1em;
-  }
-  .about {
-    margin-top: 4.5em;
-  }
-}
-
 .about__container {
   row-gap: 2rem;
   text-align: center;
@@ -603,12 +506,7 @@ img {
   width: 500px;
 }
 
-@media only screen and (min-width: 240px) and (max-width: 480px) {
-  .about__container .about__img img {
-    max-width: 100%; /* responsive image */
-    height: auto;
-  }
-}
+
 
 .about__subtitle {
   margin-bottom: var(--mb-2);
@@ -624,17 +522,6 @@ img {
 
 /* ===== SKILLS =====*/
 
-@media only screen and (min-width: 240px) and (max-width: 480px) {
-  #skills {
-    margin-top: 2em;
-    overflow-x: hidden;
-  }
-  .stack {
-    margin-top: 2em;
-    margin-right: 40px;
-    margin-left: 1px;
-  }
-}
   .skills__container {
     row-gap: 2rem;
 }
@@ -646,14 +533,7 @@ img {
 }
 
 @media only screen and (min-width: 240px) and (max-width: 480px)  {
-  .stack {
-    display: grid;
-    grid-template-columns: 50px 50px 50px;
-    grid-column-gap: 45px;
-    grid-row-gap: 30px;
-    align-content: center;
-    justify-content: center;
-  }
+ 
 
   #skills .button {
    
@@ -725,13 +605,11 @@ img {
 .projects__link::after {
   position: absolute;
   content: "";
-  width: 60px;
   height: 0.1rem;
   left: 0;
   right: 0;
-  margin-left: 50px;
-  top: 3.0rem;
-  background-color: var(--first-color);
+  margin-left: 38px;
+  top: 1.2rem;
   background-color: var(--first-color);
   opacity: 0;
   transition: opacity .2s ease-in-out;
@@ -788,7 +666,7 @@ img {
   height: 0.1rem;
   left: 0;
   right: 0;
-  top: 3.0rem;
+  top: 2.2rem;
   background-color: var(--first-color);
 }
 
@@ -796,6 +674,9 @@ img {
   .blog .subtitle, .blog-content p {
     text-align: center;
     font-size: 15px;
+  }
+  .blog .section-title::after {
+    top: 3.0rem;
   }
 }
 
@@ -822,8 +703,14 @@ img {
   left: 0;
   right: 0;
   margin-left: 50px;
-  top: 3.0rem;
+  top: 2.2rem;
   background-color: var(--first-color);
+}
+
+@media screen and (min-width: 240px) and (max-width: 480px){
+  .contact .title::after{
+    top: 3.0rem;
+  }
 }
 
 .contact-content {
@@ -1115,6 +1002,144 @@ img {
       transform: translateY(-1rem);
   }
 }
+
+/* Media queries */
+
+@media screen and (min-width: 240px) and (max-width: 480px) {
+  .change-theme i {
+    font-size: 20px;
+    margin-left: 20px;
+    padding-bottom: 50px;
+  }
+}
+
+@media only screen and (min-width: 240px) and (max-width: 480px) {
+  .home__img img {
+      width: 100px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+      margin-bottom: 7em;
+    }
+  }
+
+  @media screen and (min-width: 240px) and (max-width: 480px){
+    .blog.section-title::after{
+      top: 3.0rem;
+    }
+    .projects-section .section-title::after {
+      top: 3.0rem;
+    }
+    .about .section-title::after {
+      top: 3.0rem;
+    }
+    .skills .section-title::after {
+      top: 3.0rem;
+    }
+  }
+
+  @media only screen and (max-width: 767px) {
+    .home__data {
+      margin-top: 100px;
+    }
+  }
+  @media only screen and (max-width: 767px) {
+    #home {
+      margin-top: 200px;
+    }
+  }
+
+  @media only screen and (max-width: 767px) {
+    .home__data p {
+      margin-top: 5px;
+      font-size: 1rem;
+    }
+  }
+
+  @media only screen and (max-width: 767px) {
+    .home__social a{
+      margin-top: 40px;
+      font-size: 30px;
+    }
+    .home__data p {
+      font-size: 15px;
+      padding: 5px;
+   }
+   .home__data a {
+     margin-top: 4px;
+   }
+}
+
+  @media (max-width: 500px) {
+    .home__social .scroll-down {
+      justify-content: center;
+    }
+  }
+
+@media only screen and (min-width: 240px) and (max-width: 480px) {
+  #skills {
+    margin-top: 2em;
+    overflow-x: hidden;
+  }
+  .stack {
+    margin-top: 2em;
+    margin-right: 40px;
+    margin-left: 1px;
+  }
+   .stack {
+    display: grid;
+    grid-template-columns: 50px 50px 50px;
+    grid-column-gap: 45px;
+    grid-row-gap: 30px;
+    align-content: center;
+    justify-content: center;
+  }
+}
+  
+  @media only screen and (max-width: 767px) {
+    .skills__container .resume__col--2 {
+      justify-content: center;
+      align-items: center;
+      margin-left: auto;
+    }
+    .home__social-icon {
+      font-size: 20px;
+      display: flex;
+      flex-direction: row;
+      padding: 0 0.4rem;
+    }
+  }
+
+  @media screen and (max-width: 768px) {
+    .home__img {
+      width: 100px;
+      margin-bottom: 12rem;
+      margin-left: -80px;
+      align-content: center;
+  
+    }
+  }
+
+      
+    @media screen and (max-width: 767px) {
+      .about__container {
+        margin-top: 1em;
+      }
+      .about {
+        margin-top: 4.5em;
+      }
+    }
+
+    @media only screen and (min-width: 240px) and (max-width: 480px) {
+      .about__container .about__img img {
+        max-width: 100%; /* responsive image */
+        height: auto;
+      }
+    }
+
+  
+  
+  
 
 
 
