--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -478,13 +478,32 @@ img {
   border-radius: 1rem;
 }
 
+/* Begin: Button animation */
 
+.home__data .button i{
+  margin-bottom: 5px;
+  padding-bottom: -10px;
+  margin-left: 10px;
+  animation: load 1.5s ease-in-out infinite; 
+ }
+ 
+ @keyframes load{
+   0%,100% {
+     margin-left: 50px;
+   }
+   50% {
+     margin-left: 10px;
+   }
+ }
+
+ /* End: Button animation */
+ 
 /*BUTTONS*/
 .button {
   display: inline-block;
   background-color: var(--first-color);
   color: #fff;
-  padding: 0.75rem 2.5rem;
+  padding: 0.75rem 1rem;
   font-weight: var(--font-semi);
   border-radius: 1.5rem;
 }
