--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -647,6 +647,19 @@ img {
   left: 77%;
   padding-left: 20px;
   padding-right: 20px;
+  cursor: pointer;
+}
+
+.projects__box .fa-github {
+  color: var(--second-color);
+  font-size: 1.5rem;
+  position: relative;
+  top: -8.5px;
+  left: 10px;
+}
+
+.fa-github:hover {
+  color: var(--first-color);
 }
 
 @media only screen and (min-width: 240px) and (max-width: 480px) {
