--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -518,6 +518,20 @@ img {
   background: blue;
 }
 
+.bttn {
+  display: inline-block;
+  background-color: var(--first-color);
+  color: #fff;
+  padding: 0.75rem 1rem;
+  font-weight: var(--font-semi);
+  border-radius: 1.5rem;
+}
+
+.bttn:hover {
+  box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
+  background: blue;
+}
+
 /* ===== ABOUT =====*/
 
 .about__container {
