--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -385,6 +385,28 @@ img {
   100% { transform: rotate( 0.0deg) }
 }
 
+
+.lightning {
+  animation-name: wave-animation;  /* Refers to the name of your @keyframes element below */
+  animation-duration: 1.5s;        /* Change to speed up or slow down */
+  animation-iteration-count: infinite;  /* Never stop waving :) */
+  transform-origin: 80% 80%;       /* Pivot around the bottom-left palm */
+  display: inline-block;
+  font-size: 30px;
+}
+
+@keyframes lightning-animation {
+  0% { transform: rotate( 0.0deg) }
+ 10% { transform: rotate(14.0deg) }  /* The following five values can be played with to make the waving more or less extreme */
+ 20% { transform: rotate(-8.0deg) }
+ 30% { transform: rotate(14.0deg) }
+ 40% { transform: rotate(-4.0deg) }
+ 50% { transform: rotate(10.0deg) }
+ 60% { transform: rotate( 0.0deg) }  /* Reset for the last half to pause */
+100% { transform: rotate( 0.0deg) }
+}
+
+
 .home {
   height: calc(100vh - 3rem);
   row-gap: 2rem;
@@ -461,8 +483,6 @@ img {
   margin-top: -100px;
   margin-left: auto;
 }
-
-
 
 .home__social-icon {
   width: max-content;
@@ -550,7 +570,8 @@ img {
 }
 
 .second__text,
-.first__text {
+.first__text,
+.third__text {
   text-align: justify;
 }
 
