--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -528,7 +528,7 @@ img {
   display: inline-block;
   background-color: var(--first-color);
   color: #fff;
-  padding: 0.75rem 1rem;
+  padding: 0.6rem 1rem;
   font-weight: var(--font-semi);
   border-radius: 1.5rem;
 }
@@ -573,6 +573,7 @@ img {
 .first__text,
 .third__text {
   text-align: justify;
+  padding: 1px;
 }
 
 /* ===== SKILLS =====*/
