--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -535,7 +535,7 @@ img {
 
 .button:hover {
   box-shadow: 0 10px 36px rgba(0, 0, 0, 0.15);
-  background: blue;
+  background: var(--button-text-color);
 }
 
 
