--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -2,6 +2,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap");
 @import url('https://fonts.googleapis.com/css2?family=Bubblegum+Sans&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Irish+Grover&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@200&display=swap');
+
 
 /*===== VARIABLES CSS =====*/
 
@@ -267,12 +269,13 @@ img {
 
 .nav__logo {
   font-size: 30px;
-  font-family: var(--section-font-family);
+  font-family: Arial, Helvetica, sans-serif;
+  
 }
 
 @media only screen and (max-width: 767px) {
   .nav__logo {
-    font-size: 40px;
+    font-size: 30px;
   }
 }
 
@@ -306,6 +309,7 @@ img {
 
 .nav__item {
   margin-bottom: var(--mb-4);
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 .nav__item:hover {
