--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,7 +8,7 @@
 /*===== VARIABLES CSS =====*/
 
 :root {
-  --header-height: 4.2rem;
+  --header-height: 4.5rem;
   --font-semi: 600;
 }
 
@@ -66,7 +66,7 @@ body.dark-theme {
 }
 
 .change-theme i {
-  font-size: 23px;
+  font-size: 20px;
   margin-left: 50px;
   padding-bottom: 70px;
   cursor: pointer;
@@ -270,8 +270,9 @@ img {
 /*===== NAV =====*/
 
 .nav__logo {
-  font-size: 30px;
+  font-size: 40px;
   font-family: Arial, Helvetica, sans-serif;
+  padding-top: 20px;
   
 }
 
@@ -326,9 +327,9 @@ img {
   position: absolute;
   content: "";
   width: 100%;
-  height: 0.18rem;
+  height: 0.1rem;
   left: 0;
-  top: 2rem;
+  top: 1.5rem;
   background-color: var(--first-color);
 }
 .nav__logo {
@@ -358,7 +359,7 @@ img {
   width: 100%;
   height: 0.18rem;
   left: 0;
-  top: 2rem;
+  top: 1.5rem;
   background-color: var(--first-color);
 }
 
