--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1119,6 +1119,13 @@ img {
     }
   }
 
+  @media only screen and (max-width: 991px) {
+   .home__img img {
+    margin-bottom: 8rem;
+   }
+}
+
+
   @media screen and (min-width: 240px) and (max-width: 480px){
     .blog.section-title::after{
       top: 3.0rem;
