--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1121,7 +1121,7 @@ img {
 
   @media only screen and (max-width: 991px) {
    .home__img img {
-    margin-bottom: 8rem;
+    margin-top: 3rem;
    }
 }
 
